<resources>
    <string name="app_name">CV App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Rayhan Khan</string>
    <string name="designation">Native Android Developer</string>
    <string name="profile_picture">profile picture</string>
    <string name="description">Being an Android Designer, over the years I have been successfully able to master the skills required for creating immensely functioning, smoothly operating and visually pleasant mobile applications</string>
    <string name="home">Home</string>
    <string name="projects">Projects</string>
    <string name="skills">Skills</string>
    <string name="personal">Personal</string>
    <string name="internet_error">Not connected to internet!</string>
    <string name="success">Success</string>
    <string name="see_more">See more</string>
    <string name="programming_languages">Programming Languages</string>
    <string name="design_patterns">Design Patterns</string>
    <string name="ide">IDE</string>
    <string name="operating_system">Operating System</string>
    <string name="version_control_tools">Version Control Tools</string>
    <string name="design_tools">Design Tools</string>
    <string name="native_android_developer">Native Android Developer</string>
    <string name="rayhan_khan">Rayhan Khan</string>
    <string name="experiences">Experiences</string>
    <string name="profile">Profile</string>
    <string name="academic_accomplishments">Academic Accomplishments</string>
    <string name="professional_training">Professional Training</string>
    <string name="languages_i_speak">Languages I Speak</string>
    <string name="leisure_interests">Leisure Interests</string>
    <string name="see_all">See All</string>
    <string name="see_more_">See more...</string>
    <string name="core_skills">Core Skills</string>
    <string name="social_handles">Social Handles</string>
    <string name="contacts_amp_social_handles"><![CDATA[Contacts & Social Handles]]></string>
</resources>