<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/personal_fragment"
            android:title="@string/profile"
            android:icon="@drawable/ic_personal"
            app:showAsAction="always"/>

    <item
            android:id="@+id/skill_fragment"
            android:title="@string/skills"
            android:icon="@drawable/ic_skill_list"
            app:showAsAction="always"/>

    <item
            android:id="@+id/main_fragment"
            android:title="@string/experiences"
            android:icon="@drawable/ic_homepage"
            app:showAsAction="always"/>


    <item
            android:icon="@drawable/ic_app"
            android:id="@+id/project_fragment"
            android:title="@string/projects"
            app:showAsAction="always"/>


</menu>