<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragments.skills.SkillsFragment"
        >

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_marginBottom="16dp"
            android:layout_height="match_parent">


        <androidx.recyclerview.widget.RecyclerView
                app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintStart_toStartOf="@+id/guideline1"
                app:layout_constraintEnd_toStartOf="@+id/guideline7"
                android:layout_marginTop="8dp"
                android:id="@+id/rv_core_skill"/>

        <androidx.constraintlayout.widget.Guideline
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintGuide_begin="16dp"/>

        <androidx.constraintlayout.widget.Guideline
                app:layout_constraintGuide_end="16dp"
                app:layout_constraintStart_toEndOf="parent"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline7"/>

        <androidx.constraintlayout.widget.Guideline
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintGuide_begin="16dp"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline8"/>

        <TextView
                android:text="Core Skills"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                app:layout_constraintStart_toStartOf="@+id/guideline1"
                app:layout_constraintTop_toTopOf="@+id/guideline8"
                app:layout_constraintEnd_toStartOf="@+id/guideline7"
                style="@style/H1TextAppearance"/>

        <TextView
                android:text="Relevent Skills"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/rv_core_skill"
                app:layout_constraintStart_toStartOf="@+id/guideline1"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline7"
                style="@style/H1TextAppearance"/>

        <TextView
                android:text="@string/programming_languages"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:layout_constraintStart_toStartOf="@+id/guideline1"
                app:layout_constraintEnd_toStartOf="@+id/guideline7"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                style="@style/H2Avenir"/>

        <androidx.recyclerview.widget.RecyclerView
                app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
                app:flow_horizontalAlign="start"
                app:flow_wrapMode="aligned"
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintEnd_toStartOf="@+id/guideline7"
                android:id="@+id/rv_programming_langs"/>

        <TextView
                android:text="@string/design_patterns"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/rv_programming_langs"
                app:layout_constraintStart_toStartOf="@+id/guideline1"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline7"
                style="@style/H2Avenir"/>

        <androidx.recyclerview.widget.RecyclerView
                app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:layout_constraintStart_toStartOf="@+id/guideline1"
                app:layout_constraintEnd_toStartOf="@+id/guideline7"
                android:layout_marginStart="8dp"
                android:id="@+id/rv_design_patterns"/>

        <TextView
                android:text="Comfortable With"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                app:layout_constraintStart_toStartOf="@+id/guideline1"
                app:layout_constraintEnd_toStartOf="@+id/guideline7"
                app:layout_constraintTop_toBottomOf="@+id/rv_design_patterns"
                android:layout_marginTop="24dp"
                style="@style/H1TextAppearance"/>

        <TextView
                style="@style/H2Avenir"
                android:text="@string/ide"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                app:layout_constraintStart_toStartOf="@+id/guideline1"
                app:layout_constraintEnd_toStartOf="@+id/guideline7"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"

                />

        <androidx.recyclerview.widget.RecyclerView
                app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/guideline7"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                app:layout_constraintStart_toStartOf="@+id/guideline1"
                android:layout_marginStart="8dp"
                android:id="@+id/rv_ide"/>

        <TextView
                android:text="@string/operating_system"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                style="@style/H2Avenir"
                app:layout_constraintTop_toBottomOf="@+id/rv_ide"
                app:layout_constraintStart_toStartOf="@+id/guideline1"
                app:layout_constraintEnd_toStartOf="@+id/guideline7"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"/>

        <androidx.recyclerview.widget.RecyclerView
                app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                app:layout_constraintStart_toStartOf="@+id/guideline1"
                app:layout_constraintEnd_toStartOf="@+id/guideline7"
                android:layout_marginStart="8dp"
                android:id="@+id/rv_operating_system"/>

        <TextView
                android:text="@string/version_control_tools"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView8"
                app:layout_constraintStart_toStartOf="@+id/guideline1"
                app:layout_constraintEnd_toStartOf="@+id/guideline7"
                app:layout_constraintTop_toBottomOf="@+id/rv_operating_system"
                android:layout_marginTop="16dp"
                style="@style/H2Avenir"
                android:layout_marginStart="8dp"/>

        <androidx.recyclerview.widget.RecyclerView
                app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/guideline1"
                app:layout_constraintTop_toBottomOf="@+id/textView8"
                app:layout_constraintEnd_toStartOf="@+id/guideline7"
                android:layout_marginStart="8dp"
                android:id="@+id/rv_version_controls"/>

        <TextView
                android:text="@string/design_tools"
                style="@style/H2Avenir"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView9"
                app:layout_constraintStart_toStartOf="@+id/guideline1"
                app:layout_constraintEnd_toStartOf="@+id/guideline7"
                app:layout_constraintTop_toBottomOf="@+id/rv_version_controls"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"/>

        <androidx.recyclerview.widget.RecyclerView
                app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/guideline1"
                app:layout_constraintEnd_toStartOf="@+id/guideline7"
                app:layout_constraintTop_toBottomOf="@+id/textView9"
                android:layout_marginStart="8dp"
                android:id="@+id/rv_design_tools"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>